--- a/package.json
+++ b/package.json
@@ -3,5 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Bruno Andrade <brunoan99@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "tsnd --respawn --transpile-only src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^18.7.16",
+    "prisma": "^4.3.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.3"
+  }
 }
