--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "tsnd --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.1.6",
     "@types/node": "^18.7.16",
     "prisma": "^4.3.1",
+    "prisma-erd-generator": "^1.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   },
