--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-POSTGRES_DATABASE_URL="postgresql://psql:psql@localhost:5432/prisma?schema=public"
+DATABASE_URL="postgresql://psql:psql@localhost:5432/prisma?schema=public"
