--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Bruno Andrade <brunoan99@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --respawn --transpile-only src/index.ts"
+    "dev": "ts-node src/index.ts"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.6",
